crates/ink/tests/ui/contract/fail/constructor-multiple-wildcard-selectors.stderr
error: encountered ink! constructor with overlapping wildcard selectors
  --> tests/ui/contract/fail/constructor-multiple-wildcard-selectors.rs:13:9
   |
13 |         pub fn constructor2() -> Self {
   |         ^^^

error: first ink! constructor with overlapping wildcard selector here
 --> tests/ui/contract/fail/constructor-multiple-wildcard-selectors.rs:8:9
  |
8 |         pub fn constructor1() -> Self {
  |         ^^^
